force-app/main/default/objects/BTN_Revenue__c/BTN_Revenue__c.object-meta.xml
<CustomObject>
    <label>Revenue</label>
    <nameField>
        <displayFormat>RE{00000}</displayFormat>
        <label>Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>