force-app/main/default/objects/BTN_Revenue__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Business account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Revenues</relationshipLabel>
    <relationshipName>Revenues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>